--- a/functions/package.json
+++ b/functions/package.json
@@ -12,6 +12,7 @@
     "node": "12"
   },
   "dependencies": {
+    "busboy": "^0.3.1",
     "firebase": "^7.5.2",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0"
